# Bol_crime

./: .Rhistory  BoL_target.R  build_crime_targets.py  build_crime_targets_v2.py  build_delinquency_targets_v3.py  nlsy79_delinquency_targets_v3.csv  nlsy79_with_crime_targets.csv  nlsy79_with_crime_targets_v2.csv
BoL approach/: child_crime_bol_pipeline_draft.ipynb  requirements.txt
BoL approach 2/: README.md
BoL approach 2/notebooks/: bol_prediction_trial.ipynb  temporal_bol_baseline_texts.ipynb  temporal_delinquency_targets_documentation.ipynb
BoL approach/adapted_child_crime/: compare_child_bol_logit_baseline.R  compare_child_bol_logit_baseline.py  create_child_bol_broad_persistent.py  create_child_bol_longitudinal_cutoff.py  create_child_bol_sample.py  evaluate_child_bol_broad_persistent_fairness.R  evaluate_child_bol_broad_persistent_thresholds.py  evaluate_child_bol_fairness.R  evaluate_child_bol_llm_thresholds.py  evaluate_child_bol_longitudinal_thresholds.py  predict_child_bol_broad_persistent_openai.py  predict_child_bol_longitudinal_openai.py  predict_child_bol_sample_openai.py
BoL approach/metadata_examples/: anonymized_example_bol.txt  child_crime_broad_persistent_fairness_gaps_120.csv  child_crime_broad_persistent_fairness_metrics_120.csv  child_crime_broad_persistent_feature_index.csv  example_prediction_output.json  (+8 more)
BoL approach/starter_original/: README.md  pyproject.toml  reshape_nlsy79.py
temporal_targets/: build_temporal_delinquency_targets.py  temporal_delinquency_target_items_2000_2020.csv  temporal_delinquency_targets_documentation.ipynb
(+10 files in other folders)
